--- a/JiaSyuanLibrary/packages.config
+++ b/JiaSyuanLibrary/packages.config
@@ -1,19 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
-  <package id="CacheManager.Core" version="1.2.0" targetFramework="net462" />
-  <package id="CacheManager.SystemRuntimeCaching" version="1.2.0" targetFramework="net462" />
+  <package id="AutoMapper" version="15.0.1" targetFramework="net48" />
+  <package id="CacheManager.Core" version="2.0.0" targetFramework="net48" />
+  <package id="CacheManager.SystemRuntimeCaching" version="2.0.0" targetFramework="net48" />
   <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.TimeProvider" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.13.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.13.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.13.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.13.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.8" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="9.0.8" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.8" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.8" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.8" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
 </packages>
